test/fixtures/eval/stdin_messages.snapshot
[stdin]
[stdin]:1
with(this){__filename}
^^^^

SyntaxError: Strict mode code may not include a with statement
    at new Script (node:vm:*:*)
    at createScript (node:vm:*:*)
    at Object.runInThisContext (node:vm:*:*)
    at node:internal/process/execution:*:*
    at [stdin]-wrapper:*:*
    at runScript (node:internal/process/execution:*:*)
    at evalScript (node:internal/process/execution:*:*)
    at node:internal/main/eval_stdin:*:*
    at Socket.<anonymous> (node:internal/process/execution:*:*)
    at Socket.emit (node:events:*:*)

Node.js *
42
42
[stdin]:1
throw new Error("hello")
^

Error: hello
    at [stdin]:*:*
    at Script.runInThisContext (node:vm:*:*)
    at Object.runInThisContext (node:vm:*:*)
    at node:internal/process/execution:*:*
    at [stdin]-wrapper:*:*
    at runScript (node:internal/process/execution:*:*)
    at evalScript (node:internal/process/execution:*:*)
    at node:internal/main/eval_stdin:*:*
    at Socket.<anonymous> (node:internal/process/execution:*:*)
    at Socket.emit (node:events:*:*)

Node.js *
[stdin]:1
throw new Error("hello")
^

Error: hello
    at [stdin]:*:*
    at Script.runInThisContext (node:vm:*:*)
    at Object.runInThisContext (node:vm:*:*)
    at node:internal/process/execution:*:*
    at [stdin]-wrapper:*:*
    at runScript (node:internal/process/execution:*:*)
    at evalScript (node:internal/process/execution:*:*)
    at node:internal/main/eval_stdin:*:*
    at Socket.<anonymous> (node:internal/process/execution:*:*)
    at Socket.emit (node:events:*:*)

Node.js *
100
[stdin]:1
let x = 100; y = x;
               ^

ReferenceError: y is not defined
    at [stdin]:*:*
    at Script.runInThisContext (node:vm:*:*)
    at Object.runInThisContext (node:vm:*:*)
    at node:internal/process/execution:*:*
    at [stdin]-wrapper:*:*
    at runScript (node:internal/process/execution:*:*)
    at evalScript (node:internal/process/execution:*:*)
    at node:internal/main/eval_stdin:*:*
    at Socket.<anonymous> (node:internal/process/execution:*:*)
    at Socket.emit (node:events:*:*)

Node.js *

[stdin]:1
let ______________________________________________; throw 10
                                                    ^
10
(Use `node --trace-uncaught ...` to show where the exception was thrown)

Node.js *

[stdin]:1
let ______________________________________________; throw 10
                                                    ^
10
(Use `node --trace-uncaught ...` to show where the exception was thrown)

Node.js *
done
